--- a/Kiosk-poc/apps/Kiosk/common/css/main.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/main.css
@@ -2,14 +2,13 @@
     font-family: helveticaNeueThin;
     src: url (../fonts/HelveticaNeueThin.ttf);
 }*/
-
 * {
 	text-shadow: none;
 	/*font-family: helveticaNeueThin;*/
 }
 
 html, body {
-	height: 100%; 
+	height: 100%;
 	margin: 0px !important;
 }
 
@@ -34,6 +33,8 @@ html, body {
 	user-select: none;
 }
 
+
+
 #pageContent {
 	position: absolute;
 	top: 0px;
@@ -43,12 +44,12 @@ html, body {
 	border: none;
 	margin-top: 0;
 	padding: 0;
-	-webkit-box-shadow: rgba(66, 66, 66, 0.89) 4px 4px 12px 0px; 
-	-moz-box-shadow: rgba(66, 66, 66, 0.89) 4px 4px 12px 0px; 
+	-webkit-box-shadow: rgba(66, 66, 66, 0.89) 4px 4px 12px 0px;
+	-moz-box-shadow: rgba(66, 66, 66, 0.89) 4px 4px 12px 0px;
 	box-shadow: rgba(66, 66, 66, 0.89) 4px 4px 12px 0px;
 	border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: #FFF;
+	border-bottom-right-radius: 10px;
+	background-color: #FFF;
 }
 
 #header {
@@ -71,7 +72,7 @@ html, body {
 	margin-right: 20px;
 	display: inline-block;
 	height: 48px;
-	display:table-cell;
+	display: table-cell;
 }
 
 #header .right {
@@ -85,8 +86,7 @@ html, body {
 	margin-left: 10px;
 }
 
-#header .left a,
-#header .right a {
+#header .left a, #header .right a {
 	font-weight: normal;
 	text-decoration: none;
 	color: #FFF;
@@ -94,6 +94,7 @@ html, body {
 	margin-top: 8px;
 	display: block;
 	float: right;
+	font-size: 20px;
 }
 
 #header .left a {
@@ -140,6 +141,7 @@ html, body {
 	line-height: 48px;
 	color: #FFF;
 	font-weight: normal;
+	font-size: 20px;
 }
 
 #footer {
@@ -159,17 +161,18 @@ html, body {
 	text-decoration: none;
 	color: #FFF;
 }
-.bottom-wraper{
+
+.bottom-wraper {
 	background-color: #EE5A48;
 	padding-bottom: 5px;
 	padding-top: 7px;
-	border-color:#EE5A48;
-	border-width:1px;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+	border-color: #EE5A48;
+	border-width: 1px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
- #center.with-logo {
+#center.with-logo {
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
@@ -254,7 +257,7 @@ html, body {
 #right-panel ul {
 	border: none;
 	-webkit-box-shadow: none;
-	-moz-box-shadow: none; 
+	-moz-box-shadow: none;
 	box-shadow: none;
 	float: left;
 	width: 100%;
@@ -312,8 +315,7 @@ html, body {
 	background-repeat: no-repeat;
 }
 
-#right-panel ul li.logout, 
-#right-panel ul li.terms-of-service {
+#right-panel ul li.logout, #right-panel ul li.terms-of-service {
 	position: absolute;
 	bottom: 0;
 	left: 27px;
@@ -324,8 +326,7 @@ html, body {
 	bottom: 46px;
 }
 
-#right-panel ul li.logout a, 
-#right-panel ul li.terms-of-service a {
+#right-panel ul li.logout a, #right-panel ul li.terms-of-service a {
 	border-bottom: none;
 	border-top: 1px solid #abacae;
 }
@@ -349,26 +350,32 @@ html, body {
 	top: 0;
 	display: block;
 }
+
 .ui-panel-closed {
 	width: 0;
 	max-height: 100%;
 	overflow: hidden;
 	visibility: hidden;
 }
+
 .ui-panel-fixed {
 	position: fixed;
 	bottom: -1px; /* Fixes gap on Chrome for Android */
 	padding-bottom: 1px;
 }
+
 .ui-panel-display-reveal {
 	z-index: 1;
 }
+
 .ui-panel-display-push {
 	z-index: 999;
 }
+
 .ui-panel-display-overlay {
 	z-index: 1001; /* Fixed toolbars have z-index 1000 */
 }
+
 .ui-panel-inner {
 	padding: 1em;
 }
@@ -376,9 +383,11 @@ html, body {
 .ui-panel-page-container {
 	overflow-x: visible;
 }
+
 .ui-panel-page-container-themed .ui-page-active {
 	background: none;
 }
+
 .ui-panel-wrapper {
 	position: relative;
 	min-height: inherit;
@@ -400,6 +409,7 @@ html, body {
 	z-index: 1002;
 	display: none;
 }
+
 .ui-panel-dismiss-open {
 	display: block;
 }
@@ -413,8 +423,8 @@ html, body {
 /* Fix for Windows Phone issue #6349: unset the transition for transforms in case of fixed toolbars. */
 @media screen and ( max-device-width: 768px ) {
 	.ui-page-header-fixed .ui-panel-animate.ui-panel-wrapper,
-	.ui-page-footer-fixed .ui-panel-animate.ui-panel-wrapper,
-	.ui-panel-animate.ui-panel-fixed-toolbar {
+		.ui-page-footer-fixed .ui-panel-animate.ui-panel-wrapper,
+		.ui-panel-animate.ui-panel-fixed-toolbar {
 		-ms-transition: none;
 	}
 	/* We need a transitionend event ... */
@@ -424,9 +434,9 @@ html, body {
 	}
 }
 /* Hardware acceleration for smoother transitions on WebKit browsers */
-.ui-panel-animate.ui-panel:not(.ui-panel-display-reveal) {
+.ui-panel-animate.ui-panel:not (.ui-panel-display-reveal ) {
 	-webkit-backface-visibility: hidden;
-	-webkit-transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0, 0, 0);
 }
 /* Panel positioning (for overlay and push) */
 /* Panel left closed */
@@ -435,22 +445,24 @@ html, body {
 }
 /* Panel left closed animated */
 .ui-panel-animate.ui-panel-position-left.ui-panel-display-overlay,
-.ui-panel-animate.ui-panel-position-left.ui-panel-display-push {
+	.ui-panel-animate.ui-panel-position-left.ui-panel-display-push {
 	left: 0;
-	-webkit-transform: translate3d(-90%,0,0);
-	-moz-transform: translate3d(-90%,0,0);
-	transform: translate3d(-90%,0,0);
+	-webkit-transform: translate3d(-90%, 0, 0);
+	-moz-transform: translate3d(-90%, 0, 0);
+	transform: translate3d(-90%, 0, 0);
 }
 /* Panel left open */
-.ui-panel-position-left.ui-panel-display-reveal, /* Unset "panel left closed" for reveal */
-.ui-panel-open.ui-panel-position-left {
+.ui-panel-position-left.ui-panel-display-reveal,
+	/* Unset "panel left closed" for reveal */ .ui-panel-open.ui-panel-position-left
+	{
 	left: 0;
 }
 /* Panel left open animated */
 .ui-panel-animate.ui-panel-open.ui-panel-position-left.ui-panel-display-overlay,
-.ui-panel-animate.ui-panel-open.ui-panel-position-left.ui-panel-display-push {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+	.ui-panel-animate.ui-panel-open.ui-panel-position-left.ui-panel-display-push
+	{
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	-moz-transform: none;
 }
 /* Panel right closed */
@@ -459,22 +471,24 @@ html, body {
 }
 /* Panel right closed animated */
 .ui-panel-animate.ui-panel-position-right.ui-panel-display-overlay,
-.ui-panel-animate.ui-panel-position-right.ui-panel-display-push {
+	.ui-panel-animate.ui-panel-position-right.ui-panel-display-push {
 	right: 0;
-	-webkit-transform: translate3d(90%,0,0);
-	-moz-transform: translate3d(90%,0,0);
-	transform: translate3d(90%,0,0);
+	-webkit-transform: translate3d(90%, 0, 0);
+	-moz-transform: translate3d(90%, 0, 0);
+	transform: translate3d(90%, 0, 0);
 }
 /* Panel right open */
-.ui-panel-position-right.ui-panel-display-reveal, /* Unset "panel right closed" for reveal */
-.ui-panel-position-right.ui-panel-open {
+.ui-panel-position-right.ui-panel-display-reveal,
+	/* Unset "panel right closed" for reveal */ .ui-panel-position-right.ui-panel-open
+	{
 	right: 0;
 }
 /* Panel right open animated */
 .ui-panel-animate.ui-panel-open.ui-panel-position-right.ui-panel-display-overlay,
-.ui-panel-animate.ui-panel-open.ui-panel-position-right.ui-panel-display-push {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+	.ui-panel-animate.ui-panel-open.ui-panel-position-right.ui-panel-display-push
+	{
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	-moz-transform: none;
 }
 /* Wrapper and fixed toolbars positioning (for reveal and push) */
@@ -487,9 +501,9 @@ html, body {
 .ui-panel-animate.ui-panel-page-content-position-left {
 	left: 0;
 	right: 0;
-	-webkit-transform: translate3d(90%,0,0);
-	-moz-transform: translate3d(90%,0,0);
-	transform: translate3d(90%,0,0);
+	-webkit-transform: translate3d(90%, 0, 0);
+	-moz-transform: translate3d(90%, 0, 0);
+	transform: translate3d(90%, 0, 0);
 }
 /* Panel right open */
 .ui-panel-page-content-position-right {
@@ -500,83 +514,89 @@ html, body {
 .ui-panel-animate.ui-panel-page-content-position-right {
 	left: 0;
 	right: 0;
-	-webkit-transform: translate3d(-90%,0,0);
-	-moz-transform: translate3d(-90%,0,0);
-	transform: translate3d(-90%,0,0);
+	-webkit-transform: translate3d(-90%, 0, 0);
+	-moz-transform: translate3d(-90%, 0, 0);
+	transform: translate3d(-90%, 0, 0);
 }
 /* Dismiss model open */
 .ui-panel-dismiss-open.ui-panel-dismiss-position-left {
 	left: 90%;
 }
+
 .ui-panel-dismiss-open.ui-panel-dismiss-position-right {
 	right: 90%;
 }
 /* Shadows and borders */
 .ui-panel-display-reveal {
-	-webkit-box-shadow: inset -5px 0 5px rgba(0,0,0,.15);
-	-moz-box-shadow: inset -5px 0 5px rgba(0,0,0,.15);
-	box-shadow: inset -5px 0 5px rgba(0,0,0,.15);
+	-webkit-box-shadow: inset -5px 0 5px rgba(0, 0, 0, .15);
+	-moz-box-shadow: inset -5px 0 5px rgba(0, 0, 0, .15);
+	box-shadow: inset -5px 0 5px rgba(0, 0, 0, .15);
 }
+
 .ui-panel-position-right.ui-panel-display-reveal {
-	-webkit-box-shadow: inset 5px 0 5px rgba(0,0,0,.15);
-	-moz-box-shadow: inset 5px 0 5px rgba(0,0,0,.15);
-	box-shadow: inset 5px 0 5px rgba(0,0,0,.15);
+	-webkit-box-shadow: inset 5px 0 5px rgba(0, 0, 0, .15);
+	-moz-box-shadow: inset 5px 0 5px rgba(0, 0, 0, .15);
+	box-shadow: inset 5px 0 5px rgba(0, 0, 0, .15);
 }
+
 .ui-panel-display-overlay {
-	-webkit-box-shadow: 5px 0 5px rgba(0,0,0,.15);
-	-moz-box-shadow: 5px 0 5px rgba(0,0,0,.15);
-	box-shadow: 5px 0 5px rgba(0,0,0,.15);
+	-webkit-box-shadow: 5px 0 5px rgba(0, 0, 0, .15);
+	-moz-box-shadow: 5px 0 5px rgba(0, 0, 0, .15);
+	box-shadow: 5px 0 5px rgba(0, 0, 0, .15);
 }
+
 .ui-panel-position-right.ui-panel-display-overlay {
-	-webkit-box-shadow: -5px 0 5px rgba(0,0,0,.15);
-	-moz-box-shadow: -5px 0 5px rgba(0,0,0,.15);
-	box-shadow: -5px 0 5px rgba(0,0,0,.15);
+	-webkit-box-shadow: -5px 0 5px rgba(0, 0, 0, .15);
+	-moz-box-shadow: -5px 0 5px rgba(0, 0, 0, .15);
+	box-shadow: -5px 0 5px rgba(0, 0, 0, .15);
 }
+
 .ui-panel-open.ui-panel-position-left.ui-panel-display-push {
 	border-right-width: 1px;
 	margin-right: -1px;
 }
-.ui-panel-page-content-position-left.ui-panel-page-content-display-push {
+
+.ui-panel-page-content-position-left.ui-panel-page-content-display-push
+	{
 	margin-left: 1px;
 	width: auto;
 }
+
 .ui-panel-open.ui-panel-position-right.ui-panel-display-push {
 	border-left-width: 1px;
 	margin-left: -1px;
 }
-.ui-panel-page-content-position-right.ui-panel-page-content-display-push {
+
+.ui-panel-page-content-position-right.ui-panel-page-content-display-push
+	{
 	margin-right: 1px;
 	width: auto;
 }
 /* Responsive: wrap on wide viewports once open */
-@media (min-width:55em) {
-	.ui-responsive-panel .ui-panel-page-content-open.ui-panel-page-content-position-left {
+@media ( min-width :55em) {
+	.ui-responsive-panel .ui-panel-page-content-open.ui-panel-page-content-position-left
+		{
 		margin-right: 90%;
 	}
-	.ui-responsive-panel .ui-panel-page-content-open.ui-panel-page-content-position-right {
+	.ui-responsive-panel .ui-panel-page-content-open.ui-panel-page-content-position-right
+		{
 		margin-left: 90%;
 	}
 	.ui-responsive-panel .ui-panel-page-content-open {
-		width: auto;	
+		width: auto;
 	}
 	.ui-responsive-panel .ui-panel-dismiss-display-push,
-	.ui-responsive-panel.ui-page-active ~ .ui-panel-dismiss-display-push {
+		.ui-responsive-panel.ui-page-active ~ .ui-panel-dismiss-display-push {
 		display: none;
 	}
 }
 
-
-
 /*    refactored////////////////////////////////////////////////////////////////////////////////*/
-
 #next-home-wrapper {
-	
 	height: 100%;
-	
 }
 
 .next-home-content {
-	
 	height: 100%;
 	margin-right: 5px;
 	margin-left: 5px;
@@ -616,7 +636,7 @@ html, body {
 	color: #818181;
 }
 
-.homes tr.home-autoloan td p.top-title{
+.homes tr.home-autoloan td p.top-title {
 	color: #FFF;
 }
 
@@ -628,20 +648,31 @@ html, body {
 	margin: 0;
 	height: 50px;
 	background-color: #5e5e5e;
-	
-	-webkit-filter: blur(17px);
-    -moz-filter: blur(17px);
-    -o-filter: blur(17px);
-    -ms-filter: blur(17px);
-    filter: blur(17px);
-    z-index: 0;
+	opacity:0.5;
+}
+
+.ui-footer {
+	background: transparent !important;
+}
+
+.little {
+	font-size: 10px;
+}
+
+.content-header{
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 100px;
+	padding-top: 100px;
+	padding-right: 100px;
+	font-size: 30px;
+	color: #333332;
 }
 
 .homes tr td p.bottom-title {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	
 	margin: 0;
 	text-align: right;
 	color: #FFF;
@@ -649,45 +680,5 @@ html, body {
 	font-size: 30px;
 	z-index: 10;
 	
-	-webkit-animation: fadein 5s; /* Safari, Chrome and Opera > 12.1 */
-	-moz-animation: fadein 5s; /* Firefox < 16 */
-    -ms-animation: fadein 5s; /* Internet Explorer */
-    -o-animation: fadein 5s; /* Opera < 12.1 */
-    animation: fadein 5s;
 }
 
-
-
-
-@keyframes fadein {
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-moz-keyframes fadein { /* Firefox */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-webkit-keyframes fadein { /* Safari and Chrome */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-o-keyframes fadein { /* Opera */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity: 1;
-    }
-}
