--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-simulator-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-simulator-view.css
@@ -1,3 +1,22 @@
+#mortgageSimulator {
+	height: 100%;
+}
+
+.options-content {
+	height: 100%;
+	margin-right: 5px;
+	margin-left: 5px;
+	overflow: hidden;
+}
+
+.options-top {
+	width: 100%;
+	height: 91%;
+	border-spacing: 0px;
+	
+	
+}
+
 .property-details-list .thumb {
 	float: left;
 	width: 5%;
@@ -90,24 +109,24 @@ white-space: nowrap;
 
 a#back{
   margin:0;
-  border-color:#DF4B20;
-  color: #BD2020;
+  border-color:#E76749;
+  color: #E76749;
   background-color:white;	
   text-shadow: 0 0px 0 #eeeeee;	
   border-radius:0px 0px 0px 5px ;
 }
 a#submitButton{
   margin:0;
-  border-color: #DF4B20;
+  border-color: #E76749;
   border-width: 1px 1px 1px 0;
-  color: #BD2020;
+  color: #E76749;
   background-color:white;
   text-shadow: 0 0px 0 #eeeeee;	
   border-radius:0px 0px 5px ;
 }
 
 table, td, th {
-    border-color:#DF4B20;
+    border-color:#E76749;
     background-color:white;
     height:90px;
     text-align: center;
@@ -122,6 +141,7 @@ input.centerText{
 	margin:0; 
 	padding:0;
 }
+
 .ui-input-text.ui-custom {
     border: none;
     box-shadow: none;
@@ -129,3 +149,32 @@ input.centerText{
     margin: 0px;
     text-align: right;
 }
+#testimage img{
+	max-width:900px;
+    max-height:750px;
+    min-height:380px;
+
+} 
+a#back {
+	margin: 0;
+	border-color: #E76749;
+	color: #E76749;
+	text-shadow: 0 0px 0 #eeeeee;
+	border-radius: 0px 0px 0px 10px;
+	background-color: white;
+	padding-bottom: 15px;
+	padding-top: 15px;
+}
+
+a#submitButton {
+	margin: 0;
+	border-color: #E76749;
+	border-width: 1px 1px 1px 0;
+	color: #E76749;
+	text-shadow: 0 0px 0 #eeeeee;
+	border-radius: 0px 0px 10px;
+	background-color: white;
+	padding-bottom: 15px;
+	padding-top: 15px;
+}
+
