--- a/Kiosk-poc/apps/Kiosk/common/css/pages/next-best-offer-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/next-best-offer-view.css
@@ -1,4 +1,3 @@
-
 .homes tr.home-insurance {
 	background-image: url(../../images/content/insurance.jpg);
 }
@@ -33,17 +32,41 @@ a#cs-continue {
 	padding-bottom: 15px;
 	padding-top: 15px;
 }
-.center{
+
+.center {
 	margin-left: auto;
 	margin-right: auto;
 }
-.little{
-  font-size: 10px;
 
-	}
-	.ui-footer{
-	
-	background:transparent !important;
-	}
+.little {
+	font-size: 10px;
+}
 
+.ui-footer {
+	background: transparent !important;
+}
 
+a#homeButton {
+	border-color: #E76749;
+	border-width: 1px 1px 1px 1px;
+	color: #E76749;
+	font-size: 20px;
+	text-shadow: 0 0px 0 #eeeeee;
+	border-radius: 0px 0px 10px 10px;
+	background-color: white;
+	margin: 0px;
+}
+
+}
+.next-best-content {
+	height: 100%;
+	margin-right: 5px;
+	margin-left: 5px;
+}
+
+.homes {
+	width: 100%;
+	height: 92%;
+	border-spacing: 0px;
+	position: relative;
+}
