--- a/Kiosk-poc/apps/Kiosk/common/css/pages/select-mortgage-type-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/select-mortgage-type-view.css
@@ -51,6 +51,7 @@ a#cs-continue {
 	background-color: #E76749;
 	color: white;
 	margin: 0px;
+	padding: 10px;
 }
 #mortgae-amount{
 	border-width: 0px;
