--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
@@ -10,14 +10,13 @@
 
 .options-top {
 	width: 100%;
-	height: 94%;
-	border-spacing: 0px;
-	overflow: hidden;
-	
+    height: 84%;
+    border-spacing: 0px;
+    margin-top: 100px;
+}
 }
 
 a#cs-cancel {
-	
 	border-color: #DF4B20;
 	color: #BD2020;
 	text-shadow: 0 0px 0 #eeeeee;
@@ -28,7 +27,6 @@ a#cs-cancel {
 }
 
 a#cs-continue {
-	
 	border-color: #E76749;
 	border-width: 1px 1px 1px 0;
 	color: #E76749;
@@ -44,11 +42,13 @@ a#cs-continue {
 	margin-left: auto;
 	margin-right: auto;
 }
-#table-wrapper{
+
+#table-wrapper {
 	width: 83%;
 	padding-left: 100px;
 }
-.large-padding{
+
+.large-padding {
 	padding-left: 100px;
 	padding-right: 100px;
 	padding-top: 100px;
@@ -59,15 +59,14 @@ a#cs-continue {
 }
 
 .large-text {
-   font-size:40px;	
-   color: #3a3a3a;
-   text-align: left;
+	font-size: 40px;
+	color: #3a3a3a;
+	text-align: left;
 }
 
 .ui-footer {
 	background: transparent !important;
 }
-
 
 .options-table {
 	width: 100%;
@@ -76,33 +75,34 @@ a#cs-continue {
 	position: relative;
 }
 
-tr.row{
+tr.row {
 	
-	
-}
-tr.table-spacer{
-	height: 20px;
-}
-td.info-thumb{
-	width: 30px;
-	height: 30px;
-}
-img.info-thumb{
-	width: 30px;
-	height: 30px;
-}
-.button-wrapper{
-	border: solid 1px #E76749;
-   
-    padding-top:10px;
-    padding-bottom:10px;
-    font-size:30px;
-	color: #E76749;
-	
-	border-radius: 10px;
-/* 	background-color: white; */
-/* 	padding-bottom: 15px; */
-/* 	padding-top: 15px; */
-	width: 88%; 
 }
 
+tr.table-spacer {
+	height: 20px;
+}
+
+td.info-thumb {
+	width: 30px;
+	height: 30px;
+	padding-left: 5px;
+}
+
+img.info-thumb {
+	width: 30px;
+	height: 30px;
+}
+
+.button-wrapper {
+	border: solid 1px #E76749;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: 30px;
+	color: #E76749;
+	border-radius: 10px;
+	/* 	background-color: white; */
+	/* 	padding-bottom: 15px; */
+	/* 	padding-top: 15px; */
+	width: 88%;
+}
