--- a/Kiosk-poc/apps/Kiosk/common/css/main.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/main.css
@@ -142,6 +142,7 @@ html, body {
 	color: #FFF;
 	font-weight: normal;
 	font-size: 20px;
+	width: 360px;
 }
 
 #footer {
@@ -666,8 +667,9 @@ html, body {
 	padding-left: 100px;
 	
 	padding-right: 100px;
-	font-size: 40px;
+	font-size: 30px;
 	color: #333332;
+	
 }
 
 .homes tr td p.bottom-title {
