--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
@@ -10,12 +10,13 @@
 
 .options-top {
 	width: 100%;
-    height: 84%;
-    border-spacing: 0px;
-    margin-top: 100px;
-}
+	height: 84%;
+	border-spacing: 0px;
+	overflow: hidden;
+	padding-top: 100px;
 }
 
+}
 a#cs-cancel {
 	border-color: #DF4B20;
 	color: #BD2020;
@@ -86,7 +87,7 @@ tr.table-spacer {
 td.info-thumb {
 	width: 30px;
 	height: 30px;
-	padding-left: 5px;
+	margin-left: 10px;
 }
 
 img.info-thumb {
