--- a/Kiosk-poc/apps/Kiosk/common/css/pages/next-best-offer-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/next-best-offer-view.css
@@ -76,3 +76,14 @@ a#homeButton {
 	margin: 0px;
 	height: 262px;
 }
+.bottom-title-right{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	margin: 0;
+	text-align: right;
+	color: #FFF;
+	padding: 5px;
+	font-size: 30px;
+	z-index: 10;
+}
