remove transitions effcet

--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
@@ -47,6 +47,7 @@ a#cs-continue {
 #table-wrapper {
 	width: 83%;
 	padding-left: 100px;
+	height: 320px;
 }
 
 .large-padding {
@@ -77,7 +78,7 @@ a#cs-continue {
 }
 
 tr.row {
-	
+	height: 61px;
 }
 
 tr.table-spacer {
