--- a/Kiosk-poc/apps/Kiosk/common/css/main.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/main.css
@@ -33,8 +33,6 @@ html, body {
 	user-select: none;
 }
 
-
-
 #pageContent {
 	position: absolute;
 	top: 0px;
@@ -55,7 +53,7 @@ html, body {
 #header {
 	width: 100%;
 	height: 48px;
-	padding-top: 10px;
+	padding-top: 20px;
 	padding-bottom: 10px;
 	background-position: center;
 	background-size: cover;
@@ -435,9 +433,30 @@ html, body {
 	}
 }
 /* Hardware acceleration for smoother transitions on WebKit browsers */
-.ui-panel-animate.ui-panel:not (.ui-panel-display-reveal ) {
-	-webkit-backface-visibility: hidden;
-	-webkit-transform: translate3d(0, 0, 0);
+.ui-panel-animate
+.ui-panel
+:not
+ 
+(
+.ui-panel-display-reveal
+ 
+)
+{
+-webkit-backface-visibility
+:
+ 
+hidden
+;
+
+	
+-webkit-transform
+:
+ 
+translate3d
+(0
+,
+0,
+0);
 }
 /* Panel positioning (for overlay and push) */
 /* Panel left closed */
@@ -650,7 +669,7 @@ html, body {
 	margin: 0;
 	height: 50px;
 	background-color: #5e5e5e;
-	opacity:0.5;
+	opacity: 0.5;
 }
 
 .ui-footer {
@@ -661,15 +680,13 @@ html, body {
 	font-size: 10px;
 }
 
-.content-header{
+.content-header {
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 100px;
-	
 	padding-right: 100px;
 	font-size: 30px;
 	color: #6B6B68;
-	
 }
 
 .homes tr td p.bottom-title {
@@ -680,8 +697,29 @@ html, body {
 	text-align: right;
 	color: #FFF;
 	padding: 5px;
-	font-size: 30px;
+	padding-left: 15px; font-size : 30px;
 	z-index: 10;
-	
+	font-size: 30px;
 }
 
+.popup-title {
+	text-align: center;
+	background-color: #E76749;
+	color: white;
+	margin: 0px;
+	padding: 10px;
+	border-radius: 10px 10px 0px 0px;
+}
+
+.popup-content-wrapper {
+	border-color: white;
+	border-width: 1px;
+	border-radius: 0px 0px 10px 10px;
+	padding: 15px;
+	background-color: white;
+}
+
+#bottom-menu {
+	width: 100%; 
+display: block;
+}
