--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-simulator-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-simulator-view.css
@@ -185,21 +185,15 @@ a#submitButton {
 }
 
 #ask-expert , #confirmation {
+	background-color:transparent;
 	border-width: 0px;
 }
 
-.popup-content {
-	
-}
 
 
 
-.popup-wrapper {
-	border-color: white;
-	border-width: 1px;
-	border-radius: 10px;
-	padding: 5px;
-}
+
+
 a#cancel {
 	margin: 0;
 	border-color: #E76749;
@@ -232,6 +226,22 @@ button#confirmationSubmit{
 input.rightText {
 	text-align: right;
 }
-.popup-wrapper p{
-	text-align: center;
+#mortgage-simulator-list {
+	margin: 0px;
+	border-width: 0px;
 }
+#mortgage-simulator-list li{
+	margin: 0px;
+	border-width: 0px;
+	border-bottom: 1px solid #ccc;
+	background-image: none;
+}
+.block-a{
+	width: 50%;
+	float:left;
+}
+.block-b{
+	width: 50%;
+	float:right;
+}
+
