general css update - stabilizing interface after page transition

--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-options-view.css
@@ -1,9 +1,10 @@
+
 #options-wrapper {
-	
+	height: 100%;
 }
 
 .options-content {
-	height: 994px;
+	height: 100%;
 	margin-right: 5px;
 	margin-left: 5px;
 }
