--- a/Kiosk-poc/apps/Kiosk/common/css/main.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/main.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'LightFont'; /* Roboto Light */
+    src: url('../fonts/RobotoLight/Roboto-Light-webfont.ttf') format('truetype'),
+         url('../fonts/RobotoLight/Roboto-Light-webfont.svg#robotolight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'RegularFont'; /* Roboto Regular */
+    src: url('../fonts/RobotoRegular/Roboto-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/RobotoRegular/Roboto-Regular-webfont.svg#robotolight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*, body, p, div, span, a, form, input, select, textarea, button, .ui-btn {
+	text-shadow: none;
+	font-weight: normal;
+	font-family: 'LightFont';
+}
+h1 , h2 , h3{
+	text-shadow: none;
+	font-family: 'LightFont';
+    font-weight: bold;
+	
+}
+
+
+
+
 /*@font-face {
     font-family: helveticaNeueThin;
     src: url (../fonts/HelveticaNeueThin.ttf);
