--- a/Kiosk-poc/apps/Kiosk/common/css/main.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/main.css
@@ -19,7 +19,7 @@
 	font-weight: normal;
 	font-family: 'LightFont';
 }
-h1 , h2 , h3{
+h1 , h2 , h3 , h4{
 	text-shadow: none;
 	font-family: 'LightFont';
     font-weight: bold;
