--- a/Kiosk-poc/apps/Kiosk/common/css/pages/home-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/home-view.css
@@ -38,6 +38,24 @@ a#go-ar {
 	margin-right: auto;
 }
 
+#confirmationPopup  {
+	padding: 20px;
+	background-color:#ef5a49;
+	color: #FFF;
+}
+
+#confirmationPopup p.loader {
+	background: url(../../images/loader.GIF);
+	float: left;
+	width: 60px;
+	height: 64px;
+	margin-top: 15px;
+	background-position: center;
+	background-size: cover;
+	margin-bottom: 0;
+	margin-top: 15px;
+	margin-right: 20px;
+}
 
 
 
