updating mortgage simulator :making fields non editable

--- a/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-simulator-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/mortgage-simulator-view.css
@@ -103,6 +103,9 @@ input.rightText {
 	overflow: hidden;
 	white-space: nowrap;
 }
+.ui-listview li.not-editable{
+	background-color: #F5F5F5;
+}
 
 a#back {
 	margin: 0;
