--- a/Kiosk-poc/apps/Kiosk/common/css/pages/home-view.css
+++ b/Kiosk-poc/apps/Kiosk/common/css/pages/home-view.css
@@ -42,7 +42,7 @@ a#go-ar {
 	padding: 20px;
 	background-color:#ef5a49;
 	color: #FFF;
-	min-width: 400px;
+	min-width: 200px;
 }
 
 #confirmationPopup p.loader {
@@ -57,6 +57,15 @@ a#go-ar {
 	margin-top: 15px;
 	margin-right: 20px;
 }
-
+#go-fr:active,
+#go-ar:active, 
+#go-fr:focus,
+#go-ar:focus,
+#go-fr:hover,
+#go-ar:hover {
+	color: #FFF;
+	background-color: #ef5a49;
+	text-shadow: none;
+}
 
 
